# equilib

./: LICENSE  README.md  app.py  generate_sperner_dataset.py  publish_to_hf.py  pyproject.toml  requirements.txt  topo_align_showcase.ipynb
.github/workflows/: publish.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  MODEL_CARD_INTEGRATION.md  THEORY.md
equilib/: __init__.py  adaptive_solver.py  adaptive_topo_align.py  agentic_judge.py  analytics.py  human_ui.py  industrial.py  moe_router.py  ndim_solver.py  ndim_topo_align.py  plotting.py  rlhf_steering_demo.py  solver.py  sperner_trainer.py  surrogate_solver.py  surrogate_topo_align.py  topo_align.py
examples/: README.md  generate_sperner_dataset.py  moe_routing_example.py  quickstart.py  rlhf_steering_demo.py  surrogate_example.py
scripts/: publish_to_hf.py
sperner/: __init__.py  adaptive_solver.py  agentic_judge.py  human_ui.py  industrial.py  moe_router.py  ndim_solver.py  rlhf_steering_demo.py  solver.py  sperner_trainer.py  surrogate_solver.py
tests/: benchmark.py  conftest.py  test_adaptive_solver.py  test_analytics.py  test_integration.py  test_moe_router.py  test_ndim_solver.py  test_plotting.py  test_solver.py  test_sperner_contract.py  test_sperner_trainer.py
tools/: equilib_login.py  equilib_merge.py  topo_merge.py
