[project]
name = "sperner"
version = "0.1.0"
description = "Gradient-free multi-objective alignment via Sperner's Lemma and implicit Freudenthal triangulation."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Oussama Mesbah", email = "omesbah@users.noreply.github.com"}
]
keywords = ["pytorch", "alignment", "multi-objective", "sperner", "llm", "topological", "nash-equilibrium"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "torch>=2.0",
    "requests>=2.28",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
peft = [
    "transformers>=4.30",
    "peft>=0.5",
]
ui = [
    "streamlit>=1.28",
]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
]
all = [
    "sperner[peft,ui,dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/OussamaMesbah/sperner"
Repository = "https://github.com/OussamaMesbah/sperner"
Documentation = "https://github.com/OussamaMesbah/sperner/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["sperner"]

[tool.pytest.ini_options]
timeout = 60
